# home_budget_web

./: .gitignore  ISSUE_RESOLUTION.md  README.md  docker-compose-postgres.yaml  docker-compose.yaml  dump-files.sh  dump-frontend.sh  render.yaml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  README.md  README_DUAL_WRITE.md  README_MIGRATIONS.md  alembic.ini  alembic_conventions.md  db_migration_guidelines.md  db_schema_guidelines.md  entrypoint.sh  pyproject.toml  requirements.txt  run_local.sh
backend/alembic/: env.py
backend/alembic/versions/: a2cb921575ca_create_expenses_and_incomes_tables.py  cb740587175f_create_expenses_and_incomes_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  db.py  expense_repository.py  feature_flags.py  income_repository.py  json_repository.py  models.py  postgres_repository.py  repository.py  settings.py  storage.py  (+1 more)
backend/migrations/: env.py  migration_pr_template.md
backend/openapi/: openapi_v1.json
backend/scripts/: __init__.py  seed.py  seed_db.py  seed_smoke.py  seed_test_data.py
backend/tests/: conftest.py  test_config.py  test_expense_add.py  test_expense_bulk_delete.py  test_expense_delete.py  test_expense_put_update.py  test_expense_service.py  test_expense_update.py  test_feature_flags.py  test_healthcheck.py  test_income_add.py  test_income_bulk_delete.py  test_income_delete.py  test_income_put_update.py  test_income_update.py  test_migrations.py  test_mobile_edit_flow.py  test_phase4_db_storage.py  test_phase5_full_db_mode.py  test_put_endpoint_extra_fields.py  test_repository.py  test_schema_models.py  test_seed.py  test_smoke.py  test_smoke_ci.py  test_smoke_db.py
(+88 files in other folders)
